<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    app:theme="@style/ToolbarTheme"
    tools:context=".Controller.MainActivityController">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_height="55dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/icon_toolbar_left"
                android:src="@drawable/ic_icon_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true" />



            <TextView
                android:id="@+id/text_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon_toolbar_left"
                android:layout_marginLeft="7dp"
                android:layout_centerInParent="true"
                android:textColor="@color/colorTextWhite"
                android:textSize="20dp"
                android:text="Kitsu"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout android:layout_height="250dp"
            android:layout_width="180dp"
            android:layout_margin="2dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/card_view"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardMaxElevation="7dp">
        <ImageView
            android:id="@+id/igImageUrl"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="19dp"
            android:text="@string/maintitle"/>
            <TextView
                android:id="@+id/txtMainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="-"/>



            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:textStyle="bold"
                android:layout_marginTop="7dp"
                android:text="@string/canontitle"/>
            <TextView
                android:id="@+id/txtCanonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="-"/>


            <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
                android:textStyle="bold"
            android:layout_marginTop="7dp"
            android:text="@string/type"/>
            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="-"/>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:textStyle="bold"
                android:layout_marginTop="7dp"
                android:text="@string/year"/>
            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="-"/>
            </LinearLayout>


    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:orientation="horizontal">

        <LinearLayout android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:layout_marginTop="7dp"
            android:text="@string/genres"/>
        <TextView
            android:id="@+id/txtGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="-"/>


            <LinearLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <LinearLayout android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="19dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/averager"/>
                    <TextView
                        android:id="@+id/txtAverageR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="-"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="19dp"
                        android:layout_marginTop="7dp"
                        android:textStyle="bold"
                        android:text="@string/episoded"/>
                    <TextView
                        android:id="@+id/txtEpisodeD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="-"/>


                </LinearLayout>

                <LinearLayout android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="19dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/ager"/>
                    <TextView
                        android:id="@+id/txtAgeR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="-"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="19dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/airingstatus"/>
                    <TextView
                        android:id="@+id/txtAiringStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="-"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:layout_marginTop="7dp"
            android:textStyle="bold"
            android:text="@string/synopsys"/>

        <TextView
            android:id="@+id/txtSynopsys"
            android:layout_width="wrap_content"
            android:layout_margin="7dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="-"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextWhite"
            android:id="@+id/btnYoutube"
            android:visibility="gone"
            android:text="@string/trailer"></androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
